--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,21 @@
+html{
+
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+
 }
+
 
 .App-logo {
   height: 40vmin;
@@ -36,3 +51,68 @@
     transform: rotate(360deg);
   }
 }
+
+.separatorBox {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2%;
+  box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.1),
+  2px 2px 2px 2px rgba(0,0,0,0.1),
+  3px 3px 3px 3px rgba(0,0,0,0.1),
+  4px 4px 4px 4px rgba(0,0,0,0.1);
+}
+
+.test {
+  width: 100wh;
+  height: 100vh;
+  color: black;
+  background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+  background-size: 400% 400%;
+  -webkit-animation: Gradient 15s ease infinite;
+  -moz-animation: Gradient 15s ease infinite;
+  animation: Gradient 15s ease infinite;
+  }
+
+li{
+  text-align: left;
+}
+
+@-webkit-keyframes Gradient {
+  0% {
+  background-position: 0% 50%
+  }
+50% {
+background-position: 100% 50%
+}
+100% {
+background-position: 0% 50%
+}
+}
+
+@-moz-keyframes Gradient {
+  0% {
+  background-position: 0% 50%
+  }
+50% {
+background-position: 100% 50%
+}
+100% {
+background-position: 0% 50%
+}
+}
+
+@keyframes Gradient {
+  0% {
+  background-position: 0% 50%
+  }
+50% {
+background-position: 100% 50%
+}
+100% {
+background-position: 0% 50%
+}
+}
+
