--- a/src/App.css
+++ b/src/App.css
@@ -1,59 +1,27 @@
-html{
+html, body {
+  height: 100%;
+  margin: 0px;
+  background-color: lightblue;
+  overflow-x: hidden;
+  font-family: sans-serif;
+}
 
-  width: 100vw;
+.containerOuter {
+  height: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-
-}
-
-.App {
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-
+  margin: 50px;
+ 
 }
 
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.separatorBox {
+.chartBox {
+  width: 70%;
+  height: 80%;
   background-color: white;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -65,54 +33,6 @@ html{
   4px 4px 4px 4px rgba(0,0,0,0.1);
 }
 
-.test {
-  width: 100wh;
-  height: 100vh;
-  color: black;
-  background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
-  background-size: 400% 400%;
-  -webkit-animation: Gradient 15s ease infinite;
-  -moz-animation: Gradient 15s ease infinite;
-  animation: Gradient 15s ease infinite;
-  }
-
-li{
-  text-align: left;
+h1, h2{
+  text-align: center;
 }
-
-@-webkit-keyframes Gradient {
-  0% {
-  background-position: 0% 50%
-  }
-50% {
-background-position: 100% 50%
-}
-100% {
-background-position: 0% 50%
-}
-}
-
-@-moz-keyframes Gradient {
-  0% {
-  background-position: 0% 50%
-  }
-50% {
-background-position: 100% 50%
-}
-100% {
-background-position: 0% 50%
-}
-}
-
-@keyframes Gradient {
-  0% {
-  background-position: 0% 50%
-  }
-50% {
-background-position: 100% 50%
-}
-100% {
-background-position: 0% 50%
-}
-}
-
